--- a/TripuraJobs/Tripura-Legislative-Assembly-Group-C-D-Recruitment-2026.html
+++ b/TripuraJobs/Tripura-Legislative-Assembly-Group-C-D-Recruitment-2026.html
@@ -15,6 +15,10 @@
       content="Tripura Legislative Assembly Secretariat Recruitment 2026 notification released for Group C & Group D posts. Check category-wise vacancy, eligibility, age limit, salary, exam pattern, application fee, important dates and apply online."
     />
     <meta
+        name="description"
+        content="tripura secretariat recruitment 2025"
+    />
+    <meta
       name="keywords"
       content="Tripura Legislative Assembly Recruitment 2026, Group C D Jobs Tripura, Tripura Govt Jobs 2026, TLA Secretariat Vacancy"
     />
