--- a/index.html
+++ b/index.html
@@ -206,33 +206,32 @@
         </h2>
 
         <div class="grid md:grid-cols-4 gap-6">
-          <!-- ⚓ Indian Navy NOTICE -->
+          <!--post office 2026-->
           <div
-            class="section-card border-blue-700 p-5 hover:shadow-lg transition rounded-lg bg-blue-50"
+            class="section-card border-red-600 p-5 hover:shadow-lg transition rounded-lg bg-white"
           >
-            <h3 class="font-semibold text-blue-800 mb-1">
-              📢 Indian Navy 10+2 (B.Tech) Cadet Entry 2026
+            <h3 class="font-semibold text-red-700 mb-1 flex items-center gap-2">
+              <span
+                class="animate-pulse bg-red-600 text-white text-xs px-2 py-0.5 rounded"
+              >
+                LIVE
+              </span>
+              India Post GDS Recruitment 2026 – Application Correction Window
             </h3>
 
-            <p class="text-sm text-gray-700 mb-2">
-              Indian Navy has released the notification for
-              <strong
-                >10+2 B.Tech Cadet Entry Scheme (Permanent Commission)</strong
-              >.
-            </p>
-
             <p class="text-sm text-gray-600 mb-2">
-              🗓️ Last Date to Apply:
-              <strong class="text-blue-700">19 January 2026</strong>
+              Gramin Dak Sevak (BPM, ABPM & Dak Sevak) | Edit Application Form
+              Details
             </p>
 
             <a
-              href="CentralJobs/indian-navy-10-2-btech-cadet-entry-2026.html"
+              href="CentralJobs/india-post-gds-recruitment-january-2026.html"
               class="text-blue-600 font-semibold hover:underline"
             >
-              Read Full Notice →
+              View Notice →
             </a>
           </div>
+
           <!-- 🔥 SSC GD -->
           <div
             class="section-card border-red-600 p-5 hover:shadow-lg transition rounded-lg bg-white"
@@ -259,19 +258,27 @@
           </div>
 
           <div
-            class="section-card border-indigo-600 p-5 hover:shadow-lg transition rounded-lg"
+            class="section-card border-red-600 p-5 hover:shadow-lg transition rounded-lg bg-white"
           >
-            <h3 class="font-semibold text-indigo-700 mb-1">
-              Intelligence Bureau (IB) MTS Recruitment 2025
+            <h3 class="font-semibold text-red-700 mb-1 flex items-center gap-2">
+              <span
+                class="animate-pulse bg-red-600 text-white text-xs px-2 py-0.5 rounded"
+              >
+                LIVE
+              </span>
+              RRB Group D Recruitment 2026 (CEN 09/2025)
             </h3>
+
             <p class="text-sm text-gray-600 mb-2">
-              Multi-Tasking Staff (General) | Group ‘C’ | 10th Pass
+              Indian Railways | Level-1 Posts | 22,195 Vacancies | 7th CPC Pay
+              Matrix
             </p>
+
             <a
-              href="CentralJobs/ib-mts-notice-2025.html"
+              href="CentralJobs/rrb-group-d-recruitment-2026-cen-09-2025.html"
               class="text-blue-600 font-semibold hover:underline"
             >
-              View Details →
+              Check Details & Apply →
             </a>
           </div>
 
@@ -500,6 +507,69 @@
 
           <ul class="divide-y text-sm">
             <!-- NEWEST FIRST -->
+            <!--Feb 2026-->
+            <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
+              <a
+                href="CentralJobs/rrb-group-d-recruitment-2026-cen-09-2025.html"
+                target="_blank"
+                class="flex justify-between items-start gap-3 text-blue-700 hover:text-red-700"
+              >
+                <div class="flex flex-col">
+                  <div class="flex items-center gap-2">
+                    <span class="font-medium">
+                      RRB Group D Recruitment 2026 – Track Maintainer, Helper &
+                      Other Posts
+                    </span>
+                    <span
+                      class="bg-red-100 text-red-700 text-[10px] font-semibold px-2 py-0.5 rounded-md"
+                    >
+                      NEW
+                    </span>
+                  </div>
+
+                  <span class="text-xs text-gray-500 mt-1">
+                    Railway Recruitment Boards (RRBs), Ministry of Railways
+                    (Govt. of India)
+                  </span>
+                </div>
+
+                <span class="text-xs text-gray-400 whitespace-nowrap">
+                  28 Jan 2026
+                </span>
+              </a>
+            </li>
+
+            <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
+              <a
+                href="CentralJobs/india-post-gds-recruitment-january-2026.html"
+                target="_blank"
+                class="flex justify-between items-start gap-3 text-blue-700 hover:text-red-700"
+              >
+                <div class="flex flex-col">
+                  <div class="flex items-center gap-2">
+                    <span class="font-medium">
+                      India Post GDS Recruitment January 2026 – BPM, ABPM & Dak
+                      Sevak Posts
+                    </span>
+                    <span
+                      class="bg-red-100 text-red-700 text-[10px] font-semibold px-2 py-0.5 rounded-md"
+                    >
+                      NEW
+                    </span>
+                  </div>
+
+                  <span class="text-xs text-gray-500 mt-1">
+                    Department of Posts, Ministry of Communications (Govt. of
+                    India)
+                  </span>
+                </div>
+
+                <span class="text-xs text-gray-400 whitespace-nowrap">
+                  28 Jan 2026
+                </span>
+              </a>
+            </li>
+
             <!--January 2026-->
             <li
               class="py-3 hover:bg-gray-50 transition"
