--- a/pages/central-jobs.html
+++ b/pages/central-jobs.html
@@ -88,6 +88,28 @@
       <main class="px-6 py-8">
         <div class="bg-white rounded-lg shadow-md p-4">
           <ul class="divide-y divide-gray-200 text-sm">
+            <!--FEB 2026-->
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="../CentralJobs/rrb-group-d-recruitment-2026-cen-09-2025.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline px-6"
+              >
+                <span> RRB Group D Recruitment 2026 January 2026 </span>
+                <span class="text-xs text-gray-500"> 02 Feb 2026 </span>
+              </a>
+            </li>
+
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="../CentralJobs/india-post-gds-recruitment-january-2026.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline"
+              >
+                <span> India Post GDS Recruitment January 2026 </span>
+                <span class="text-xs text-gray-500">29 Jan 2026</span>
+              </a>
+            </li>
             <!--January 2026-->
 
             <li class="py-3 hover:bg-gray-50 transition">
