--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
         <a href="pages/notices.html" class="text-gray-700 hover:text-red-600"
           >Notices</a
         >
+        <a href="pages/Image-resize.html" class="text-gray-700 hover:text-red-600"
+          >ImageResize</a
+        >
         <a href="pages/about.html" class="text-gray-700 hover:text-red-600"
           >About</a
         >
